add modal cv section styles

--- a/styles/components/_input.scss
+++ b/styles/components/_input.scss
@@ -11,7 +11,7 @@
             font-weight: normal;
             line-height: 150%;
       }
-      input, textarea {
+      input, textarea, select {
             width: 100%;
             padding: 11px 16px;
             font-size: 14px;
