--- a/styles/components/_page-title.scss
+++ b/styles/components/_page-title.scss
@@ -42,4 +42,50 @@
             height: 600px;
             z-index: -1;
       }
+
+      //post page
+      .post-page-title__title {
+            text-align: start;
+            font-size: 64px;
+            margin-top: 40px;
+            margin-bottom: 48px;
+      }
+      .page-title__additional {
+            @include flex-row;
+            width: 100%;
+            justify-content: space-between;
+
+            .page-title__meta {
+                  color: $gray700;
+                  margin-bottom: 60px;
+
+                  span {
+                        color: $gray700;
+                        font-size: 16px;
+                        font-style: normal;
+                        font-weight: 400;
+                        line-height: 160%;
+
+                        &:first-child {
+                              color: $primary;
+                              font-weight: 700;
+                        }
+                  }
+            }
+            .page-title__social {
+                  @include flex-row;
+                  gap: 12px;
+
+                  svg {
+                        cursor: pointer;
+
+                        path {
+                              transition: 0.5s;
+                        }
+                        &:hover path {
+                              fill: $primary;
+                        }
+                  }
+            }
+      }
 }
