--- a/styles/main.css
+++ b/styles/main.css
@@ -267,7 +267,9 @@ a {
   line-height: 150%;
 }
 
-.input-block input, .input-block textarea, .input-block select {
+.input-block input,
+.input-block textarea,
+.input-block select {
   width: 100%;
   padding: 11px 16px;
   font-size: 14px;
@@ -277,8 +279,86 @@ a {
   outline: none;
 }
 
-.input-block input:focus, .input-block textarea:focus, .input-block select:focus {
+.input-block input:focus,
+.input-block textarea:focus,
+.input-block select:focus {
   border: 1px solid #ff5a30;
+}
+
+.form__checkbox {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  gap: 12px;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: start;
+  /* стили при наведении курсора на checkbox */
+}
+
+.form__checkbox .custom-checkbox {
+  position: absolute;
+  z-index: -1;
+  opacity: 0;
+}
+
+.form__checkbox .custom-checkbox + label {
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: start;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
+}
+
+.form__checkbox .custom-checkbox + label::before {
+  content: "";
+  margin-top: 5px;
+  display: inline-block;
+  width: 1em;
+  height: 1em;
+  -ms-flex-negative: 0;
+      flex-shrink: 0;
+  -webkit-box-flex: 0;
+      -ms-flex-positive: 0;
+          flex-grow: 0;
+  border: 1px solid #adb5bd;
+  border-radius: 0.25em;
+  margin-right: 0.5em;
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: 50% 50%;
+}
+
+.form__checkbox .custom-checkbox:checked + label::before {
+  border-color: #ff5a30;
+  background-color: #ff5a30;
+  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 8 8'%3e%3cpath fill='%23fff' d='M6.564.75l-3.59 3.612-1.538-1.55L0 4.26 2.974 7.25 8 2.193z'/%3e%3c/svg%3e");
+}
+
+.form__checkbox .custom-checkbox:not(:disabled):not(:checked) + label:hover::before {
+  border-color: #ff5a30;
+}
+
+.form__checkbox label {
+  color: #424551;
+  font-size: 14px;
+  font-weight: normal;
+  line-height: 150%;
 }
 
 .services__item {
@@ -1649,82 +1729,6 @@ a {
 
 .application .application-container .aplication__form .form__inputs textarea {
   height: 66px;
-}
-
-.application .application-container .aplication__form .form__inputs .form__checkbox {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  gap: 12px;
-  -webkit-box-align: start;
-      -ms-flex-align: start;
-          align-items: start;
-  /* стили при наведении курсора на checkbox */
-}
-
-.application .application-container .aplication__form .form__inputs .form__checkbox .custom-checkbox {
-  position: absolute;
-  z-index: -1;
-  opacity: 0;
-}
-
-.application .application-container .aplication__form .form__inputs .form__checkbox .custom-checkbox + label {
-  display: -webkit-inline-box;
-  display: -ms-inline-flexbox;
-  display: inline-flex;
-  -webkit-box-align: start;
-      -ms-flex-align: start;
-          align-items: start;
-  -webkit-user-select: none;
-     -moz-user-select: none;
-      -ms-user-select: none;
-          user-select: none;
-}
-
-.application .application-container .aplication__form .form__inputs .form__checkbox .custom-checkbox + label::before {
-  content: "";
-  margin-top: 5px;
-  display: inline-block;
-  width: 1em;
-  height: 1em;
-  -ms-flex-negative: 0;
-      flex-shrink: 0;
-  -webkit-box-flex: 0;
-      -ms-flex-positive: 0;
-          flex-grow: 0;
-  border: 1px solid #adb5bd;
-  border-radius: 0.25em;
-  margin-right: 0.5em;
-  background-repeat: no-repeat;
-  background-position: center center;
-  background-size: 50% 50%;
-}
-
-.application .application-container .aplication__form .form__inputs .form__checkbox .custom-checkbox:checked + label::before {
-  border-color: #ff5a30;
-  background-color: #ff5a30;
-  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 8 8'%3e%3cpath fill='%23fff' d='M6.564.75l-3.59 3.612-1.538-1.55L0 4.26 2.974 7.25 8 2.193z'/%3e%3c/svg%3e");
-}
-
-.application .application-container .aplication__form .form__inputs .form__checkbox .custom-checkbox:not(:disabled):not(:checked) + label:hover::before {
-  border-color: #ff5a30;
-}
-
-.application .application-container .aplication__form .form__inputs .form__checkbox label {
-  color: #424551;
-  font-size: 14px;
-  font-weight: normal;
-  line-height: 150%;
 }
 
 footer {
