--- a/styles/components/_slider.scss
+++ b/styles/components/_slider.scss
@@ -6,12 +6,22 @@
       transition: 0.5s;
 
       .slider__slide {
+            position: relative;
             padding-top: 220px;
             padding-bottom: 355px;
             width: 100%;
             height: 100%;
-            background-image: url(../../assets/background/slide-bg.jpg);
+            //background-image: url(../../assets/background/slide-bg.jpg);
+                  z-index: -2;
 
+            .slide__bg{
+                  position: absolute;
+                  top: 0;
+                  left: 0;
+                  width: 100%;
+                  height: 100%;
+                  z-index: -1;
+            }
             .slider__title {
                   color: $white;
                   max-width: 600px;
