--- a/styles/layout/_application.scss
+++ b/styles/layout/_application.scss
@@ -1,7 +1,18 @@
 .application {
+      position: relative;
       margin-top: 120px;
-      background-image: url(../../assets/background/application-bg.jpg);
+      //background-image: url(../../assets/background/application-bg.jpg);
+      z-index: -2;
 
+      .application__bg {
+            position: absolute;
+            object-fit: cover;
+            width: 100%;
+            height: 100%;
+            top: 0;
+            left: 0;
+            z-index: -1;
+      }
       .application-container {
             display: flex;
             justify-content: end;
@@ -31,10 +42,9 @@
                         .form__input {
                               width: 100%;
                         }
-                        textarea{
+                        textarea {
                               height: 66px;
                         }
-                        
                   }
             }
       }
