--- a/styles/components/_slider.scss
+++ b/styles/components/_slider.scss
@@ -20,6 +20,7 @@
                   left: 0;
                   width: 100%;
                   height: 100%;
+                  object-fit: cover;
                   z-index: -1;
             }
             .slider__title {
